--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
 		<groupId>fr.afcepf.atod</groupId>
 		<artifactId>Wine-Parent</artifactId>
 		<version>1.0.0</version>
+		<relativePath>../Wine-Parent/pom.xml</relativePath>
 	</parent>
     <artifactId>Wine-Exception</artifactId>
     <packaging>jar</packaging>
